--- a/package.json
+++ b/package.json
@@ -9,22 +9,38 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
+    "aria": "^0.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.31",
+    "lucide": "^0.559.0",
+    "lucide-react": "^0.559.0",
+    "motion": "^12.23.26",
     "react": "^19.2.1",
+    "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.1",
-    "react-router": "7.10.1"
+    "react-router": "7.10.1",
+    "react-toggle-dark-mode": "^1.1.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.10.1",
+    "@svgr/core": "^8.1.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
+    "vite-plugin-svgr": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
