--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -27,7 +28,9 @@
     "react-dom": "^19.2.1",
     "react-router": "7.10.1",
     "react-toggle-dark-mode": "^1.1.1",
-    "tailwind-merge": "^3.4.0"
+    "react-use": "^17.6.0",
+    "tailwind-merge": "^3.4.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@react-router/dev": "7.10.1",
