--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "aria": "^0.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +31,7 @@
     "react-router": "7.10.1",
     "react-toggle-dark-mode": "^1.1.1",
     "react-use": "^17.6.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailwind-merge": "^3.4.0",
     "usehooks-ts": "^3.1.1"
   },
