--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "motion": "^12.23.26",
     "react": "^19.2.1",
     "react-aria-components": "^1.13.0",
+    "react-chrono": "^3.3.1",
     "react-dom": "^19.2.1",
     "react-router": "7.10.1",
     "react-toggle-dark-mode": "^1.1.1",
     "react-use": "^17.6.0",
-    "react-vertical-timeline-component": "^3.5.3",
     "tailwind-merge": "^3.4.0",
     "usehooks-ts": "^3.1.1"
   },
